[project]
name = "rl-envs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ale-py>=0.10.1",
    "d3rlpy>=2.8.1",
    "gymnasium[atari,box2d,classic-control,mujoco]==1.0.0",
    "gymnasium-robotics>=1.3.1",
    "minari>=0.5.3",
    "minigrid>=2.5.0",
    "numpy>=1.24.4",
    "optuna>=3.6.0",
    "pettingzoo[mpe]>=1.25.0",
    "ray[rllib]>=2.40.0",
    "sb3-contrib>=2.8.0",
    "stable-baselines3>=2.8.0",
    "supersuit>=3.9.3",
    "tensorboard>=2.16.0",
    "torch>=2.5.1",
    "swig",
    "moviepy>=2.2.1",
    "matplotlib>=3.10.8",
    "wandb>=0.26.0",
]
